# coffee-chat

./: README.md  docker-compose.yml
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: a89e720a18f2_initial_migration.py  aa7b9965ec8d_add_google_oauth_support.py
backend/app/: config.py  database.py  main.py
backend/app/admin/: auth.py  user.py  views.py
backend/app/api/: websocket.py
backend/app/api/routes/: files.py
backend/app/models/: __init__.py  user.py
backend/app/routes/: auth.py
backend/app/schemas/: user.py
backend/app/scripts/: __init__.py  create_test_user.py
backend/app/services/: s3_service.py
backend/app/utils/: security.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  ChatExamplesPage.tsx  LoginPage.tsx  apiClient.ts  index.css  main.tsx
frontend/src/services/: socketIo.ts  websocket.ts
